--- a/src/app/task-list/task-list.html
+++ b/src/app/task-list/task-list.html
@@ -1,20 +1,22 @@
 <app-task-filter></app-task-filter>
 
-<main>
+<main class="container">
     <h2>A Fazer</h2>
     <ul>
-        <li>
-            <input type="checkbox" name="completed">
-            <a>Tarefa A</a>
-            <div>
-                <button>x</button>
-            </div>
-        </li>
+        @for (task of tasks; track task.id) {
+            <li>
+                <input type="checkbox" (change)="updateTasks()" [(ngModel)]="task.completed" name="completed">
+                <a [routerLink]="['/routerLink', task.id]" [ngClass]="task.completed ? 'task-completed' : '' ">{{task.name}}</a>
+                <div class="button-box">
+                    <button (click)="removeTask(task)">x</button>
+                </div>
+            </li>
+        }
     </ul>
 
-    <form>
-        <input type="text" name="newTask" placeholder="Adicionar Tarefa">
+    <form (ngSubmit)="addTask()" #taskForm="ngForm">
+        <input type="text" [(ngModel)]="newTask.name" name="newTask" placeholder="Adicionar Tarefa" required>
 
-        <button type="submit">+</button>
+        <button type="submit" [disabled]="!taskForm.form.valid">+</button>
     </form>
 </main>
