Implementando funcionalidade ao componente task-details

--- a/src/app/task-filter/task-filter.html
+++ b/src/app/task-filter/task-filter.html
@@ -1,1 +1,1 @@
-<input type="text" placeholder="Pesquisar Tarefa">
+<input type="text" placeholder="Pesquisar Tarefa" [(ngModel)]="filter" (ngModelChange)="filterTask()">
