--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,56 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=SN+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+
+* {
+    font-family: "SN Pro", sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    border: 0;
+}
+
+:root {
+    font-size: 100%;
+    --font-size-2: 1.75rem;
+    --font-size-3: 1.25rem;
+    --font-size-4: 1rem;
+    --font-size-5: 0.85rem;
+
+    --color-blue-1: #33489D;
+    --color-blue-2: #141E41;
+    --color-blue-2-opacity: #141e41d3;
+    --color-blue-3: #283a81;
+
+    --color-black-1: #f9f9f9;
+    --color-black-2: #f1f1f1;
+    --color-black-3: #d4d4d4;
+    --color-black-4: #4b4b4b;
+
+    --color-white: #fff;
+}
+
+body {
+    background: linear-gradient(180deg, var(--color-blue-1) 15%, var(--color-blue-2) 100%);
+    min-height: 100vh;
+}
+
+h1 {
+    color: var(--color-white);
+    text-align: center;
+    font-size: var(--font-size-2);
+}
+
+h2 {
+    font-size: var(--font-size-3);
+}
+
+p, a {
+    color: var(--color-black-4);
+}
+
+.container {
+    max-width: 480px;
+    background-color: var(--color-black-2);
+    margin: 0 auto;
+    border-radius: 15px;
+    padding: 25px 15px;
+}
